Modified Makefile and README.

--- a/README
+++ b/README
@@ -1,5 +1,12 @@
 euler-haskell
 -------------
 
-I started trying project euler problems to learn some Haskell. It's been fun
-so far.
+I started trying project euler problems to learn some Haskell. It's been
+fun so far.
+
+Edit (08/22/12):
+
+I had no idea how addicting this would be. Here is my friend key, if you
+would like:
+
+	27917635368335_9a703f33c309a41e5dc8af4d1760d274
